--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,16 @@
+Cartopy==0.24.1
 certifi==2024.12.14
-numpy==1.19.5
-pyproj==3.0.1
+contourpy==1.3.1
+cycler==0.12.1
+fonttools==4.55.3
+kiwisolver==1.4.8
+matplotlib==3.10.0
+numpy==2.2.1
+packaging==24.2
+pillow==11.1.0
+pyparsing==3.2.1
+pyproj==3.7.0
+pyshp==2.3.1
+python-dateutil==2.9.0.post0
+shapely==2.0.6
+six==1.17.0
